--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
 # directory
-/.idea
+.idea
+out/
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
